--- a/tex/pre_study.tex
+++ b/tex/pre_study.tex
@@ -186,3 +186,4 @@ Such a set of low-level net fragments can directly be mapped to a set of pixels 
 However, since the input does not contain a meaningful (sub-) set of active pixels, it can be assumed that these lower-level fragments are either not present or at least do not represent any meaningful features.
 
 
+TODO: Autoencoder, Sparse-Autoencoder in Pre-Study
