--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -175,6 +175,150 @@ For example, in the process described above are all information about color and 
 To the author of this thesis, this seems to be the reason why these SNNs can't match the performance of deep learning algorithms so far and often only work well for small gray-scale image-datasets such as MNIST.
 
 
+\section{Alternative Training Algorithms}\seclbl{alt_train_algo}
+Neural networks, especially deep neural networks, are usually optimised by backpropagation of errors (c.f. Section \secref{ann}).
+Soon after backpropagation was published, it was question whether this algorithm is suitable to explain the learning in the brain \sidecite{Crick_1989, Grossberg_1987}.
+Besides the fact that backpropagation seems no biologically plausible and is responsible for many of the limitations described in Section \secref{limitationsDL}, it also has technical shortcomings.
+First, gradients might vanish or explode when propagated through too many layers \sidecite{Zhang_He_Sra_Jadbabaie_2020}.
+Second, it turns the networks into ``black boxes'' and prevents the users from getting useful insights from trained models\sidenote{training a model a layer-wise allows modularization, i.e. divide an conquer}.
+Training end-to-end does not allow to control the effect of the loss function on a hidden layer because of the non-linearity in the network \sidecite{pmlr-v38-lee15a}.
+Finally, the loss landscapes are non-optimal which might lead to slow convergence and the possibility that the reached local minimum is suboptimal \sidecite{Ioffe_Szegedy_2015}.
+
+Hebbian learning (c.f. Section \secref{hebbian}), on the other hand, is widely accepted in the fields of neurocomputing, psychology, neurology, and neurobilogy \sidecite{Widrow_Kim_Park_Perin_2019}.
+Hebbian mechanisms are for example sufficient for topographic mappings\sidenote{mapping input data to a discretized representation} \sidecite{Kohonen_1989, Grajski_Merzenich_1990}, neuroplasticity\sidenote{the networks ability to reorganize itself by forming new connections} \sidecite{Montague_Gally_Edelman_1991}, or recognizing non-linear patterns \sidecite{Mel_1992}, but also have limitations \sidecite{Anderson_1998}.
+Hebb's learning rule is insufficient as general rule and is limited temporally as it requires (almost) synchronous stimuli \sidecite{6302929}\cite{Anderson_1998}.
+However, many signals such as motor control problems, are sequential and Hebbian learning has therefore to be combined with additional memory mechanisms \sidecite{Grossberg_Schmajuk_1989}.
+
+There exists many alternative learning functions to these two well known algorithms that might overcome the aforementioned limitations.
+A group of algorithms that do not require end-to-end forward or backward pass is called \emph{Proxy Objective}.
+These algorithms use a proxy objective function for each layer.
+While backpropagation calculates a global loss after the forward pass, this strategy uses a proxy function for each layer.
+The loss function of the first Layer $L_1$ (i.e. the proxy objective of the first layer) influence only the trainable parameters of the first layer $\theta_1$ but not the parameters of the second layer $\theta_2$.
+This allows to decouple the layers.
+The different instances of \emph{Proxy Objective} methods mainly differ in the proxy objective function.
+However, the idea behind the proxy objective function is always the same; namely to characterize the separability of the hidden representations.
+Minimizing $L_1$ encourages the first layer to improve the separability of its output representations, making the classification problem simpler for the subsequent layer.
+The separability between hidden representation vectors can be measured by distance/similarity metrics as done in \sidecite{Duan_Yu_Principe_2022, Duan_Yu_Chen_Principe_2020}.
+Wang et al. \sidecite{Wang_Ni_Song_Yang_Huang_2021} propose an auxiliary neural network to map the hidden representation to another feature space before computing their distance/similarity.
+This allows to choose the dimensionality of the feature space in which the proxy objective function is computed regardless of the given network layer dimension.
+Others \sidecite{belilovsky2019greedy, Mostafa_Ramesh_Cauwenberghs_2018, Marquez_Hare_Niranjan_2018} propose an additional network with either fixed or trainable weights as proxy function and used this auxiliary network's accuracy to quantify data separability.
+Nokland and Eidnes \sidecite{pmlr-v97-nokland19a} combine the two aforementioned approaches by using two auxiliary networks; one network is trained with a ``similarity matching loss'' and the other with a cross-entropy loss (i.e. to quantify separability with an auxiliary classifier accuracy).
+A major issue of the first \emph{Proxy Objective} methods is that the models are trained layer-wise\sidenote{when layer $k$ is trained, the layers $1, ..., k-1$ are frozen and the layers $k+1, ..., n$ are not updated}.
+The resulting computational complexity can be reduced with synchronous or asynchronous training.
+In the synchronous setting is first a forward pass through all layers performed and afterwards are all layers trained simultaneously by minimizing their own proxy objective function \cite{belilovsky2019greedy}.
+In the asynchronous settings are all layers trained simultaneously by using a replay buffer for each layer that stores the layers output \sidecite{10.5555/3524938.3525007}.
+Each layer receives its input from such a buffer instead of the previous layer what eliminates the need for an end-to-end forward pass.
+
+A closely related type of learning algorithm is the \emph{Forward-Forward (FF) Algorithm} recently introduced by Hinton \sidecite{ff_algo}.
+This algorithm uses two forward passes, one with positive (i.e. real) data and one with negative data.
+Each layer has its own objective function which is to have a high ``goodness'' for positive data and a low ``goodness'' for negative data. 
+The goodness is measured by the sum of the squared neural activities.
+The goal of the learning process is to make the goodness be above some threshold value for real data and below that threshold for negative data.
+More specifically, the aim is to correctly classify input vectors as positive data or negative data.
+The probability that an input vector is positive $p(positive)$ is given by applying the logistic function $\sigma$ to the goodness minus the threshold $\theta$
+
+\begin{equation}\eqlbl{ff2}
+	p(positive) = \sigma \biggl( \sum_j y^2_j - \theta \biggr)
+\end{equation}
+
+where $y_j$ is the output of a hidden unit.
+To perform a classification task, the label is included in the input.
+Positive data consists of an input vector (e.g. an image) and the correct label, negative data consists of an input vector with the wrong label.
+The goal is then to have a high goodness in each layer for the positive data and a low goodness for the negative data.
+The only difference between positive and negative data is the label and thus the \emph{FF} algorithm only learns features that correlate with the label.
+During inference, the data is fed with each label through the network and the one with the highest goodness is kept as prediction.
+One major weakness is that one layer at a time is learned and later layers cannot affect what is learned in earlier layers.
+This limitation can be overcome by treating the static input vector as a sequence (i.e. use the same input for multiple steps) and by using a multi-layer recurrent network \sidecite{Hinton_2021}.
+The algorithm still runs forward in time but the activity vector at each layer is determined by the activity vector of the previous layer and the activity vector of the subsequent layer at the previous time-step.
+
+\emph{Target Propagation} methods are a group of algorithms that require an end-to-end forward pass but not an end-to-end backward pass.
+These algorithms compute targets\sidenote{a target can be interpreted as the value that should be predicted by a layer} rather than gradients at each layer.
+Similar to gradients, the targets are propagated backward through the network.
+While the output layer obviously uses the true label as its target (i.e. the goal is to predict the label), the targets of previous layers are found sequentially (from the output layer to the input layer).
+Good targets are those that minimize the loss in the output layer if they are realized in the forward pass.
+The simplest solution would be to apply the inverse function of each layer to propagate the target backward.
+If $h_l$ are the activations and $\theta_l$ the parameters of layer $l$, we can define the forward pass as:
+
+\begin{equation}\eqlbl{tp1}
+	h_l = f(h_{l-1}; \theta_l)
+\end{equation}
+
+The inverse function that yields the target activation $\hat{h}_l$ would then be:
+
+\begin{equation}\eqlbl{tp2}
+	\hat{h}_l = f^{-1}(\hat{h}_{l+1}; \theta_{l+1})
+\end{equation}
+
+As mentioned before, the target of the final layer $\hat{h}_L$ is the loss-optimal output activation such as the correct label distribution.
+However, advanced neural networks are usually not invertible and approximate inverse transformations have to be learned with decoders
+
+\begin{equation}\eqlbl{tp3}
+	g(h_{l+1}; \lambda_{l+1}) \approx f^{-1}(h_{l+1}; \theta_{l+1})
+\end{equation}
+
+where $\lambda_l$ are the trainable parameters of the decoder at layer $l$.
+Thus, the target activation can be approximated by an encoder:
+
+\begin{equation}\eqlbl{tp4}
+	\hat{h}_l \approx g(\hat{h}_{l+1}; \lambda_{l+1}) 
+\end{equation}
+
+
+Different instances of \emph{Target Propagation} methods mainly differ in the way the the targets are generated and/or the loss function of the decoder $L_{g}$.
+Vanilla Target Propagation \sidecite{Bengio_2014} directly derives the target from the decoder $\hat{h}_l = g(\hat{h}_{l+1}; \lambda_{l+1})$ and trains the decoder $g()$ by minimizing
+
+\begin{equation}\eqlbl{tp5}
+	L_{g} = \lVert g(h_{l+1} + \epsilon; \lambda_{l+1}) - (h_{l} + \epsilon) \rVert_2^2
+\end{equation}
+
+where $\epsilon$ is some added Gaussian noise to enhance generalization.
+It is obvious that this loss functions encourages the decoder $g()$ to learn the inverse of $f()$ by minimizing the difference between the activations from the forward-pass $h_{l}$ of layer $l$ and the decoder's output (based on the activations of the subsequent layer $h_{l+1}$).
+The targets are predicted by feeding the \emph{target activations} $\hat{h}_{l+1}$ through the decoder\sidenote{note that these are two different kind of activations: The inverse function is learned based on the activation of the forward pass $h_l$, the target activation is predicted based on the loss-optimal output activation $\hat{h}_L$}.
+
+Later, a major improvement was to extend the decoder $g()$ of Vanilla \emph{Target Propagation} with a correction term that enables a more robust optimality guarantee for bigger networks \sidecite{Lee_Zhang_Fischer_Bengio_2015}.
+This method is known as \emph{Difference Target Propagation} and extends Equation \eqref*{tp4} as follows:
+
+\begin{equation}\eqlbl{tp6}
+	\hat{h}_l = g(\hat{h}_{l+1}; \lambda_{l+1}) + [h_l - g(h_{l+1}; \lambda_{l+1})]
+\end{equation}
+
+The extra term $[h_l - g(h_{l+1}; \lambda_{l+1})]$ is to correct errors of the decoder in estimating the inverse.
+\emph{Difference Target Propagation} has been further improved by novel loss functions $L_{g}$ for the decoder.
+These methods are known as \emph{Difference Target Propagation with Difference Reconstruction Loss} and \emph{Direct Difference Target Propagation} \sidecite{10.5555/3495724.3497405}.
+However, since the concepts are roughly the same as for \emph{Difference Target Propagation} (despite adding some terms to the loss function), I do not summarize these methods in more detail here.
+An advantage of calculating targets is that only layer-wise gradients are required what allows models to have non-differentiable operations \cite{Lee_Zhang_Fischer_Bengio_2015}.
+A major drawback is that auxiliary models have to be trained to calculate the hidden targets $\hat{h}_l$ what might overweight the savings achieved by eliminating a full backward pass.
+
+Another group of alternative learning algorithms are known as \emph{Synthetic Gradients} \sidecite{pmlr-v70-jaderberg17a, 10.5555/3305381.3305475}.
+\emph{Synthetic Gradients} methods replace the gradients used in the backward pass by approximating local gradients with auxiliary models and utilize gradient-based optimization algorithms such as SGD to update the weights locally.
+The auxiliary models are usually fully-connected networks that are trained to regress a layer's gradients when given the layer's activations.
+End-to-end backwards passes are only performed occasionally to acquire real gradients that can be used to trained the gradient approximation models.
+Thus, the frequency of end-to-end backward passes is reduced.
+When auxiliary input models are used to predicts the layer's input, the frequency of the forward pass can be reduced as well in the same manner as for the backward pass \cite{pmlr-v70-jaderberg17a}.
+It is also possible to get rid of the backward pass completely by training the auxiliary gradient models with local information only \sidecite{Lansdell_Prakash_Kording_2020}.
+However, this works significantly worse than when real gradients are used.
+An advantage of \emph{Synthetic Gradients} methods is that they can be used to approximate backpropagation through time (BTT) for an unlimited number of steps \cite{pmlr-v70-jaderberg17a}.
+It has been shown that this allows more efficient training for learning long-range dependencies compared to BTT.
+
+Many other methods are motivated purely by biological plausibility.
+Some examples are \cite{10.5555.3157096.3157213, Lillicrap_Cownden_Tweed_Akerman_2016, Xiao_Chen_Liao_Poggio_2019, aaai.BalduzziVB15, 10.5555/3016100.3016156}.
+However, these biological plausible methods have been significantly outperformed by backpropagation of error on meaningful benchmark datasets \sidecite{Bartunov_Santoro_Richards_Marris_Hinton_Lillicrap_2018}.
+In the following \emph{Feedback Alignment} methods are discussed as they seem to be the most popular group of biological plausible alternatives to backpropagation.
+From a biological point of view, one of the major criticisms of backpropagation is the ``weight transportation problem'' \sidecite{Lillicrap_Cownden_Tweed_Akerman_2016}; it is believed that the human brain doesn't have a backward pass where an error signal is passed to previous layers.
+\emph{Feedback Alignment} algorithms use fixed, random weights during the backward pass \cite{Lillicrap_Cownden_Tweed_Akerman_2016}.
+Thus the symmetry between the weights used during the forward pass and the backward pass is broken.
+Later, the algorithm was improved by using fixed, random weights that share the signs with the actual weights of the network \sidecite{10.5555/3016100.3016156}.
+
+Lastly, \emph{Auxiliary Variables} are another group of learning algorithms \cite{pmlr-v33-carreira-perpinan14, 10.5555/3045390.3045677, 10.5555/3294771.3294935, Lau_Zeng_Wu_Yao_2018}.
+These methods use the idea of variable splitting, i.e. transform a complicated problem into a simpler one by introducing additional trainable variables.
+Introducing auxiliary variables may pose scalability issues, and these methods require special, usually tailor-made solvers.
+Therefore, such methods are not reviewed in more detail in this thesis.
+
+According to \sidecite{Duan_Principe_2022} and \sidecite{Bartunov_Santoro_Richards_Marris_Hinton_Lillicrap_2018}, only proxy objective functions have achieved competitive performance with large models on large datasets such as ImageNet.
+The other approaches work only on smaller datasets such as MNIST or CIFAR-10 so far.
+
+
+
 \section{Visual Representation Learning}\seclbl{visual_rep_learning}
 One of the earliest methods of learning visual representations are \emph{Autoencoders}.
 \emph{Autoencoders} have been introduced 1985 \sidecite{rumelhart1985learning} and learn an encoder and a decoder function \sidecite{pmlrv27baldi12a}.
