work on meta learning

--- a/main.bib
+++ b/main.bib
@@ -1442,7 +1442,7 @@ url={https://openreview.net/forum?id=rJY0-Kcll}
 }
 
 @inproceedings{li2019feature,
-  title={Feature-critic networks for heterogeneous domain generalization},
+  title={Feature-Critic Networks for Heterogeneous Domain Generalization},
   author={Li, Yiying and Yang, Yongxin and Zhou, Wei and Hospedales, Timothy},
   booktitle={International Conference on Machine Learning},
   pages={3915--3924},
@@ -1584,3 +1584,12 @@ url={https://openreview.net/forum?id=HJgkx2Aqt7},
 
  @article{Stanley_Clune_Lehman_Miikkulainen_2019, title={Designing neural networks through neuroevolution}, volume={1}, ISSN={2522-5839}, DOI={10.1038/s42256-018-0006-z}, number={1}, journal={Nature Machine Intelligence}, author={Stanley, Kenneth O. and Clune, Jeff and Lehman, Joel and Miikkulainen, Risto}, year={2019}, month={Jan}, pages={24–35}, language={en} }
 
+@inproceedings{10-5555-3305890-3306069, author = {Wichrowska, Olga and Maheswaranathan, Niru and Hoffman, Matthew W. and Colmenarejo, Sergio Gomez and Denil, Misha and de Freitas, Nando and Sohl-Dickstein, Jascha}, title = {Learned Optimizers That Scale and Generalize}, year = {2017}, publisher = {JMLR.org}, abstract = {Learning to learn has emerged as an important direction for achieving artificial intelligence. Two of the primary barriers to its adoption are an inability to scale to larger problems and a limited ability to generalize to new tasks. We introduce a learned gradient descent optimizer that generalizes well to new tasks, and which has significantly reduced memory and computation overhead. We achieve this by introducing a novel hierarchical RNN architecture, with minimal per-parameter overhead, augmented with additional architectural features that mirror the known structure of optimization tasks. We also develop a meta-training ensemble of small, diverse, optimization tasks capturing common properties of loss landscapes. The optimizer learns to outperform RMSProp/ADAM on problems in this corpus. More importantly, it performs comparably or better when applied to small convolutional neural networks, despite seeing no neural networks in its meta-training set. Finally, it generalizes to train Inception V3 and ResNet V2 architectures on the ImageNet dataset for thousands of steps, optimization problems that are of a vastly different scale than those it was trained on.}, booktitle = {Proceedings of the 34th International Conference on Machine Learning - Volume 70}, pages = {3751–3760}, numpages = {10}, location = {Sydney, NSW, Australia}, series = {ICML'17} }
+
+@inproceedings{antoniou2018how,
+title={How to train your {MAML}},
+author={Antreas Antoniou and Harrison Edwards and Amos Storkey},
+booktitle={International Conference on Learning Representations},
+year={2019},
+url={https://openreview.net/forum?id=HJGven05Y7},
+}
